<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NYCCTApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_content_desc">image view</string>
    <string name="news_event_heading">NYCCT News &amp; Event</string>
    
    <!-- item names -->
    <string name="news_event">News &amp; Event</string>
    <string name="office_hours">Office Hours</string>
    <string name="club_information">Club Infromation</string>
    <string name="campus_service">Campus Service</string>
    <string name="class_cancel">Class Cancel</string>
    <string name="groups_in_loops">Groups in Loops</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>News &amp; Event</item>
        <item>Office Hours</item>
        <item>Club Information</item>
        <item>Campus Service</item>
        <item>Class Cancel</item>
        <item>Groups in Loops</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/news_event_icon</item>
        <item>@drawable/office_hour_icon</item>
        <item>@drawable/club_info_icon</item>
        <item>@drawable/campus_service_icon</item>
        <item>@drawable/class_cancel_icon</item>
        <item>@drawable/groups_icon</item>
    </array>

</resources>